[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
description = tomba: Tomba Python Client Library
long_description = file: README.md
url = https://docs.pytest.org/en/latest/
project_urls =
    Source=https://github.com/tomba-io/python
    Tracker=https://github.com/tomba-io/python/issues

author = Mohamed Ben rebia
platform = any
license = Apache License 2.0
license_file = LICENSE
keywords = tomba, email, Email Finder, Email Verifier, B2B , Email marketing

[options]

packages = find:
install_requires=
    requests
